--- a/09_DevelopingDataProducts/rCharts/fig/p4.html
+++ b/09_DevelopingDataProducts/rCharts/fig/p4.html
@@ -40,17 +40,17 @@
   </head>
   <body>
     <div class='chart_container'>
-      <div id='yAxischart22b411697183' class='yAxis'></div>
-      <div id='chart22b411697183' class='rChart rickshaw'></div>
-      <div id='xAxischart22b411697183' class='xAxis'></div>
-      <div id='legendchart22b411697183' class='legend'></div>
-      <div id='sliderchart22b411697183' class='slider'></div>
+      <div id='yAxischart6adc2c9828cd' class='yAxis'></div>
+      <div id='chart6adc2c9828cd' class='rChart rickshaw'></div>
+      <div id='xAxischart6adc2c9828cd' class='xAxis'></div>
+      <div id='legendchart6adc2c9828cd' class='legend'></div>
+      <div id='sliderchart6adc2c9828cd' class='slider'></div>
     </div>
     
     <script type='text/javascript'> 
   var palette = new Rickshaw.Color.Palette({ scheme: "colorwheel" });
   var chartParams = {
- "dom": "chart22b411697183",
+ "dom": "chart6adc2c9828cd",
 "width":            560,
 "height":            400,
 "scheme": "colorwheel",
@@ -58,47 +58,47 @@
  {
  "data": [
  {
- "x":     -946753200,
+ "x":     -946771200,
 "y":           22.2 
 },
 {
- "x":     -788904000,
+ "x":     -788922000,
 "y":           44.5 
 },
 {
- "x":     -631134000,
+ "x":     -631152000,
 "y":           59.6 
 },
 {
- "x":     -473367600,
+ "x":     -473385600,
 "y":           73.2 
 },
 {
- "x":     -315601200,
+ "x":     -315619200,
 "y":           86.8 
 } 
 ],
 "name": "Food and Tobacco",
 "info": {
- "-946753200": {
+ "-946771200": {
  "Var1": "Food and Tobacco",
-"Var2":     -946753200 
+"Var2":     -946771200 
 },
-"-788904000": {
+"-788922000": {
  "Var1": "Food and Tobacco",
-"Var2":     -788904000 
+"Var2":     -788922000 
 },
-"-631134000": {
+"-631152000": {
  "Var1": "Food and Tobacco",
-"Var2":     -631134000 
+"Var2":     -631152000 
 },
-"-473367600": {
+"-473385600": {
  "Var1": "Food and Tobacco",
-"Var2":     -473367600 
+"Var2":     -473385600 
 },
-"-315601200": {
+"-315619200": {
  "Var1": "Food and Tobacco",
-"Var2":     -315601200 
+"Var2":     -315619200 
 } 
 },
 "color":  palette.color()  
@@ -106,47 +106,47 @@
 {
  "data": [
  {
- "x":     -946753200,
+ "x":     -946771200,
 "y":           10.5 
 },
 {
- "x":     -788904000,
+ "x":     -788922000,
 "y":           15.5 
 },
 {
- "x":     -631134000,
+ "x":     -631152000,
 "y":             29 
 },
 {
- "x":     -473367600,
+ "x":     -473385600,
 "y":           36.5 
 },
 {
- "x":     -315601200,
+ "x":     -315619200,
 "y":           46.2 
 } 
 ],
 "name": "Household Operation",
 "info": {
- "-946753200": {
+ "-946771200": {
  "Var1": "Household Operation",
-"Var2":     -946753200 
+"Var2":     -946771200 
 },
-"-788904000": {
+"-788922000": {
  "Var1": "Household Operation",
-"Var2":     -788904000 
+"Var2":     -788922000 
 },
-"-631134000": {
+"-631152000": {
  "Var1": "Household Operation",
-"Var2":     -631134000 
+"Var2":     -631152000 
 },
-"-473367600": {
+"-473385600": {
  "Var1": "Household Operation",
-"Var2":     -473367600 
+"Var2":     -473385600 
 },
-"-315601200": {
+"-315619200": {
  "Var1": "Household Operation",
-"Var2":     -315601200 
+"Var2":     -315619200 
 } 
 },
 "color":  palette.color()  
@@ -154,47 +154,47 @@
 {
  "data": [
  {
- "x":     -946753200,
+ "x":     -946771200,
 "y":           3.53 
 },
 {
- "x":     -788904000,
+ "x":     -788922000,
 "y":           5.76 
 },
 {
- "x":     -631134000,
+ "x":     -631152000,
 "y":           9.71 
 },
 {
- "x":     -473367600,
+ "x":     -473385600,
 "y":             14 
 },
 {
- "x":     -315601200,
+ "x":     -315619200,
 "y":           21.1 
 } 
 ],
 "name": "Medical and Health",
 "info": {
- "-946753200": {
+ "-946771200": {
  "Var1": "Medical and Health",
-"Var2":     -946753200 
+"Var2":     -946771200 
 },
-"-788904000": {
+"-788922000": {
  "Var1": "Medical and Health",
-"Var2":     -788904000 
+"Var2":     -788922000 
 },
-"-631134000": {
+"-631152000": {
  "Var1": "Medical and Health",
-"Var2":     -631134000 
+"Var2":     -631152000 
 },
-"-473367600": {
+"-473385600": {
  "Var1": "Medical and Health",
-"Var2":     -473367600 
+"Var2":     -473385600 
 },
-"-315601200": {
+"-315619200": {
  "Var1": "Medical and Health",
-"Var2":     -315601200 
+"Var2":     -315619200 
 } 
 },
 "color":  palette.color()  
@@ -202,47 +202,47 @@
 {
  "data": [
  {
- "x":     -946753200,
+ "x":     -946771200,
 "y":           1.04 
 },
 {
- "x":     -788904000,
+ "x":     -788922000,
 "y":           1.98 
 },
 {
- "x":     -631134000,
+ "x":     -631152000,
 "y":           2.45 
 },
 {
- "x":     -473367600,
+ "x":     -473385600,
 "y":            3.4 
 },
 {
- "x":     -315601200,
+ "x":     -315619200,
 "y":            5.4 
 } 
 ],
 "name": "Personal Care",
 "info": {
- "-946753200": {
+ "-946771200": {
  "Var1": "Personal Care",
-"Var2":     -946753200 
+"Var2":     -946771200 
 },
-"-788904000": {
+"-788922000": {
  "Var1": "Personal Care",
-"Var2":     -788904000 
+"Var2":     -788922000 
 },
-"-631134000": {
+"-631152000": {
  "Var1": "Personal Care",
-"Var2":     -631134000 
+"Var2":     -631152000 
 },
-"-473367600": {
+"-473385600": {
  "Var1": "Personal Care",
-"Var2":     -473367600 
+"Var2":     -473385600 
 },
-"-315601200": {
+"-315619200": {
  "Var1": "Personal Care",
-"Var2":     -315601200 
+"Var2":     -315619200 
 } 
 },
 "color":  palette.color()  
@@ -250,92 +250,92 @@
 {
  "data": [
  {
- "x":     -946753200,
+ "x":     -946771200,
 "y":          0.341 
 },
 {
- "x":     -788904000,
+ "x":     -788922000,
 "y":          0.974 
 },
 {
- "x":     -631134000,
+ "x":     -631152000,
 "y":            1.8 
 },
 {
- "x":     -473367600,
+ "x":     -473385600,
 "y":            2.6 
 },
 {
- "x":     -315601200,
+ "x":     -315619200,
 "y":           3.64 
 } 
 ],
 "name": "Private Education",
 "info": {
- "-946753200": {
+ "-946771200": {
  "Var1": "Private Education",
-"Var2":     -946753200 
+"Var2":     -946771200 
 },
-"-788904000": {
+"-788922000": {
  "Var1": "Private Education",
-"Var2":     -788904000 
+"Var2":     -788922000 
 },
-"-631134000": {
+"-631152000": {
  "Var1": "Private Education",
-"Var2":     -631134000 
+"Var2":     -631152000 
 },
-"-473367600": {
+"-473385600": {
  "Var1": "Private Education",
-"Var2":     -473367600 
+"Var2":     -473385600 
 },
-"-315601200": {
+"-315619200": {
  "Var1": "Private Education",
-"Var2":     -315601200 
+"Var2":     -315619200 
 } 
 },
 "color":  palette.color()  
 } 
 ],
 "renderer": "area",
-"id": "chart22b411697183" 
+"id": "chart6adc2c9828cd" 
 }
-  chartParams.element = document.querySelector('#chart22b411697183')
+  chartParams.element = document.querySelector('#chart6adc2c9828cd')
   
-  var graphchart22b411697183 = new Rickshaw.Graph(chartParams);
+  var graphchart6adc2c9828cd = new Rickshaw.Graph(chartParams);
   
-  graphchart22b411697183.render();
+  graphchart6adc2c9828cd.render();
   
-  var xAxischart22b411697183 = new Rickshaw.Graph.Axis.Time({
- "graph":  graphchart22b411697183  
+  var xAxischart6adc2c9828cd = new Rickshaw.Graph.Axis.Time({
+ "graph":  graphchart6adc2c9828cd  
 })
-var yAxischart22b411697183 = new Rickshaw.Graph.Axis.Y({
- "graph":  graphchart22b411697183 ,
+var yAxischart6adc2c9828cd = new Rickshaw.Graph.Axis.Y({
+ "graph":  graphchart6adc2c9828cd ,
 "orientation": "left",
-"element":  document.getElementById('yAxischart22b411697183') ,
+"element":  document.getElementById('yAxischart6adc2c9828cd') ,
 "tickFormat":  Rickshaw.Fixtures.Number.formatKMBT  
 })
-graphchart22b411697183.render()
-var legendchart22b411697183 = new Rickshaw.Graph.Legend({
- "graph":  graphchart22b411697183 ,
-"element":  document.getElementById('legendchart22b411697183')  
+graphchart6adc2c9828cd.render()
+var legendchart6adc2c9828cd = new Rickshaw.Graph.Legend({
+ "graph":  graphchart6adc2c9828cd ,
+"element":  document.getElementById('legendchart6adc2c9828cd')  
 })
-var shelvingchart22b411697183 = new Rickshaw.Graph.Behavior.Series.Toggle({
- "graph":  graphchart22b411697183 ,
-"legend":  legendchart22b411697183  
+var shelvingchart6adc2c9828cd = new Rickshaw.Graph.Behavior.Series.Toggle({
+ "graph":  graphchart6adc2c9828cd ,
+"legend":  legendchart6adc2c9828cd  
 })
-var hoverDetailchart22b411697183 = new Rickshaw.Graph.HoverDetail({
- "graph":  graphchart22b411697183  
+var hoverDetailchart6adc2c9828cd = new Rickshaw.Graph.HoverDetail({
+ "graph":  graphchart6adc2c9828cd  
 })
-var highlightchart22b411697183 = new Rickshaw.Graph.Behavior.Series.Highlight({
- "graph":  graphchart22b411697183 ,
-"legend":  legendchart22b411697183  
+var highlightchart6adc2c9828cd = new Rickshaw.Graph.Behavior.Series.Highlight({
+ "graph":  graphchart6adc2c9828cd ,
+"legend":  legendchart6adc2c9828cd  
 })
-var sliderchart22b411697183 = new Rickshaw.Graph.RangeSlider({
- "graph":  graphchart22b411697183 ,
-"element":  document.getElementById('sliderchart22b411697183')  
+var sliderchart6adc2c9828cd = new Rickshaw.Graph.RangeSlider({
+ "graph":  graphchart6adc2c9828cd ,
+"element":  document.getElementById('sliderchart6adc2c9828cd')  
 })
   
-  graphchart22b411697183.render();
+  graphchart6adc2c9828cd.render();
   
 </script> 
     
